--- a/.poggit.yml
+++ b/.poggit.yml
@@ -5,4 +5,9 @@ branches:
 projects:
   MoneyAPI:
     path: MoneyAPI/
+  libs:
+    - src: skymin\json\JsonData
+      version: ^SKY
+    - src: skymin\traits\pmmp-SimpleTrait
+      version: ^SKY
 ...
