--- a/.poggit.yml
+++ b/.poggit.yml
@@ -6,8 +6,8 @@ projects:
   MoneyAPI:
     path: MoneyAPI/
     libs:
-      - src: skymin\json\JsonData
+      - src: skymin/json/JsonData
         version: ^SKY
-      - src: skymin\traits\pmmp-SimpleTrait
+      - src: skymin/traits/pmmp-SimpleTrait
         version: ^SKY
 ...
